--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@react-google-maps/api": "^2.20.7",
     "@remixicon/react": "^4.6.0",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
